--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "description": "form for get input",
   "main": "formulario-element.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "iron-input": "^2.0.1"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
